--- a/css/style.css
+++ b/css/style.css
@@ -13,25 +13,76 @@ body {
     display: flex;
     flex-wrap: wrap;
     margin: 0 auto;
-    background: url('../img/bluedrop.svg') no-repeat;
+    overflow: visible;
 }
 
 .subCircle {
-    transform: translateZ(200px);
     position: relative;
-    top: 20%;
-    width: 30%;
-    height: 41%;
-    background: url('../img/darkyellow.svg') no-repeat;
+    transform: translateZ(200px);
     transition: transform 0.25s ease;
 }
 
-#lightblue {
+/* .green {
+    top: 70px;
+    left: 60px;
+    width: 9%;
+    height: 20%;
     background: url('../img/green.svg') no-repeat;
+    background-size: contain;
     transform: translateZ(100px);
-}
+} */
 
-#purple {
-    background: url('../img/pinkring.svg') no-repeat;
+.bluedrop {
+    top: 40%;
+    left: 10%;
+    width: 9%;
+    height: 20%;
+    background: url('../img/bluedrop.svg') no-repeat;
+    background-size: contain;
     transform: translateZ(50px);
 }
+
+.darkyellow {
+    width: 15%;
+    height: 21%;
+    background: url('../img/darkyellow.svg') no-repeat;
+    background-size: contain;
+    transform: translateZ(50px);
+}
+
+.greentablet {
+    top: 30%;
+    left: 45%;
+    width: 8%;
+    height: 20%;
+    background: url('../img/greentablet.svg') no-repeat;
+    background-size: contain;
+    transform: translateZ(50px);
+}
+
+.pinkring {
+    top: 60%;
+    left: 5%;
+    width: 20%;
+    height: 20%;
+    background: url('../img/pinkring.svg') no-repeat;
+    background-size: contain;
+    transform: translateZ(50px);
+}
+
+.sugarcube {
+    top: 5%;
+    width: 15%;
+    height: 20%;
+    background: url('../img/sugarcube.svg') no-repeat;
+    background-size: contain;
+    transform: translateZ(50px);
+}
+
+/* .purple {
+    width: 20%;
+    height: 20%;
+    background: url('../img/purple.svg') no-repeat;
+    background-size: contain;
+    transform: translateZ(50px);
+} */
