--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,17 @@ body {
     background-color: #14161E;
 }
 
+h1 {
+    position: absolute;
+    color: white;
+    font-family: sans-serif;
+    font-size: 52px;
+    z-index: 88;
+    margin: 0;
+    top: 50%;
+    left: 40%;
+}
+
 .mainCircle {
     /*the magic stuff*/
     perspective: 1000px;
